--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/animaiShelter_db
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+telegram.bot.token=6083079504:AAE3AsTflMzKc-LdW9KAqcQ12sUXftZMO_Y
+spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
+spring.jpa.hibernate.ddl-auto=validate
