--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.password=postgres
 telegram.bot.token=6083079504:AAE3AsTflMzKc-LdW9KAqcQ12sUXftZMO_Y
 spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
 spring.jpa.hibernate.ddl-auto=validate
+reports.path.dir=reports
