--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ telegram.bot.token=6083079504:AAE3AsTflMzKc-LdW9KAqcQ12sUXftZMO_Y
 spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
 spring.jpa.hibernate.ddl-auto=validate
 reports.path.dir=reports
+newperson.path=127.0.0.1:8080/person?chatId=
