1) removed field text_report from adoption_report 2) url for cynologist advices added 3) endpoins for Pet added 4) endpoints for adoption added 5) unique chatId in person added + checks during saving 6) unique personId & unique petId in adoption added + checks during saving 7) endpoinds for person added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,5 @@ telegram.bot.token=6083079504:AAE3AsTflMzKc-LdW9KAqcQ12sUXftZMO_Y
 spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
 spring.jpa.hibernate.ddl-auto=validate
 reports.path.dir=reports
-newperson.path=127.0.0.1:8080/person?chatId=
+cynologist.advice.url=dogfriend.org/2012/04/08/rescued-dog-rehab/
+newperson.url=127.0.0.1:8080/newperson?chatId=
