--- a/src/main/resources/liquibase/changelog-master.yml
+++ b/src/main/resources/liquibase/changelog-master.yml
@@ -10,3 +10,6 @@ databaseChangeLog:
 
   - include:
       file: liquibase/scripts/adoption_report.sql
+
+  - include:
+       file: liquibase/scripts/user_context.sql
