--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,9 @@ spring.datasource.password=postgres
 telegram.bot.token=5852299596:AAGolFlujNgS9v-aRvrAUJI1h9pnNA8ozTQ
 spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
 spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show_sql=true
+
 reports.path.dir=reports
 cynologist.advice.url=dogfriend.org/2012/04/08/rescued-dog-rehab/
 newperson.url=127.0.0.1:8080/newperson?chatId=
-volunteer.chatId=464584156
+volunteer.chatId=464584155
