--- a/src/main/resources/texts.properties
+++ b/src/main/resources/texts.properties
@@ -147,4 +147,19 @@
   1. Кинолог 2, тел: +79998882233\n\
   1. Кинолог 3, тел: +79998882233\n\
   1. Кинолог 4, тел: +79998882233\n\
-  1. Кинолог 5, тел: +79998882233\n\
+  1. Кинолог 5, тел: +79998882233\n
+DAILY_TEXT_REPORT_REMINDER=🔔 Добрый день! Напоминаем Вам о необходимости ежедневно присылать текстовые и фото отчеты \
+  о состоянии усыновленного питомца.\n\
+  ‼️Мы видим, что за сегодня вы еще не прислали текстовый отчет. Пожалуйста пришлите текстовый отчет в любое время \
+  в течение дня. Чтобы прислать отчет, отправьте команду /report
+DAILY_PHOTO_REPORT_REMINDER=🔔 Добрый день! Напоминаем Вам о необходимости ежедневно присылать текстовые и фото отчеты \
+  о состоянии усыновленного питомца.\n\
+  ‼️Мы видим, что за сегодня вы еще не прислали фото отчет. Пожалуйста пришлите фото отчет в любое время в течение дня. \
+  Чтобы прислать отчет, отправьте команду /report"
+PROBATION_EXTENDED_NOTIF=Добрый день! Для Вас был продлен испытательный срок. Для уточнения деталей пожалуйста \
+  обратитесь к волонтеру. Новая дата окончания испытательного срока: 
+PROBATION_FAILED_NOTIF=Добрыай день! Вынуждены Вам сообщить, что Вы не прошли испытательный срок, и Вам отказано в \
+  усыновлении питомца. Для уточнения деталей, пожалуйста обратитесь к волонтеру.
+PROBATION_SUCCESSFUL_NOTIF=Поздравляем!🎉🎉🎉 Вы успешно прошли испытательный срок! Теперь Вы счастливый хозяин \
+  Вашего нового питомца! Пожалуйста обратитесь к волонтеру по вопросу завершения процесса усыновления питомца.
+REPORTS_MISSING_FOR2DAYS=Отсутствуют отчеты за 2 дня. 
