--- a/src/main/resources/texts_dog.properties
+++ b/src/main/resources/texts_dog.properties
@@ -1,9 +1,7 @@
-/about=О приюте\n\n\
-  Наш приют - это муниципальный приют для бездомных собак и кошек в г. Астана. \n\n\
-  В нем живет почти 2500 🦮🐩🐕 собак и 150 кошек 🐈🐈‍⬛. Большие и маленькие, пушистые и гладкие, веселые и задумчивые \
-  - и на всех одна большая мечта - встретить своего Человека и найти Дом.\n\n\
-  Если вы хотите взять собаку или кошку, не ищите питомник, в котором можно купить щенка или котенка - \
-  просто свяжитесь с нами, и вы обязательно найдете себе самого лучшего друга.
+/about = Наш приют - это муниципальный приют для бездомных собак г. Астана. \n\n\
+  В приюте находится более 2500 бездомных собак, брошенных, потерянных и оказавшихся на улице при разных \
+  обстоятельствах. Дворняги, метисы и породистые. У каждой собаки своя история и свой характер. Многие из них в \
+  какой-то момент оказались не нужной игрушкой - их предал хозяин. Посмотрите в их глаза, они расскажут Вам о многом...
 /address=Адрес: г.Астана \n\n\
   Часы работы:\n\
   пн: Санитарный день\n\
@@ -24,7 +22,7 @@
   или медикаментозного опьянения строго запрещено.\n\n\
 Поджигать мусор, пользоваться открытым огнем, а также нарушать иные требования пожарной безопасности на территории \
   приюта категорически запрещено. 
-/meetingdog=Первая встреча с собакой \n\n\
+/meetingpet=Первая встреча с собакой \n\n\
   Чтобы знакомство с собакой прошло благополучно, прежде всего нужно правильно к ней подойти. \
   - Лучше приближаться по дуге, сбоку. \n\
   - Не стоит подходить лоб в лоб — это признак конкуренции.\n\
@@ -52,7 +50,7 @@
   Также, согласно санитарно-эпидемиологическим правилам, запрещено скопление большого числа птиц и млекопитающих на \
   небольшой территории — это повышает риск возникновения инфекционных болезней. \n\n\
   2. Нестабильные отношения в семье \n\
-  Любые перемены — это стресс для животного. Кошки и собаки привыкают к людям, скучают после вынужденной разлуки \
+  Любые перемены — это стресс для животного. Собаки привыкают к людям, скучают после вынужденной разлуки \
   с хозяевами и даже отказываются от еды. Если семейная пара планирует развод, не стоит брать питомца, \
   чтобы потом не обрекать его на страдания.\n\
   Случается и так, что после расставания ни муж, ни жена не изъявляют желания заботиться о животном. \
@@ -61,13 +59,13 @@
   предпочитают отдавать питомцев только людям, находящимся в крепком и счастливом браке. \n\n\
   3. Наличие маленьких детей \n\
   Семьям, где есть дети до 5 лет, сложно взять животное из приюта сразу по двум причинам. Во-первых, есть риск, \
-  что собака или кошка будет проявлять агрессию по отношению к маленькому человеку. Во-вторых, дети сами часто \
+  что собака удет проявлять агрессию по отношению к маленькому человеку. Во-вторых, дети сами часто \
   провоцируют конфликт, дергая зверька за хвост и уши или бросая в него тяжелые предметы. Происходит это по \
   недосмотру и с молчаливого попустительства взрослых людей, но в итоге виноватым оказывается животное. Если \
   ребенок получит царапины или укусы, родители, вместо того, чтобы искать контакт с питомцем и воспитывать своего \
   отпрыска, предпочтут избавиться от хвостатого «источника опасности».\n\n\
   4. Съемное жилье \n\
-  Не все домовладельцы разрешают арендаторам заводить животных. Отчасти это связано с опасениями, что кот или \
+  Не все домовладельцы разрешают арендаторам заводить животных. Отчасти это связано с опасениями, что \
   собака испортят мебель, обои и деревянные части интерьера. Кроме того, в комнатах остается неприятный запах \
   меток и шерсти, устранение которого потребует дополнительных трат. Если хозяин жилья обнаружит обман со стороны \
   квартиранта, то, скорее всего, заявит о желании немедленно расторгнуть договор. После этого и люди, и их питомец \
@@ -76,7 +74,7 @@
   5.Животное в подарок или для работы \n\
   Присутствие животного в доме накладывает на его владельцев ряд обязательств (в том числе и финансовых), \
   связанных с кормлением, лечением, правильным содержанием. По этой причине приобретение питомца не должно быть \
-  спонтанным; прежде чем решиться на такой шаг, человек должен все обдумать и рассчитать. Получая котенка или щенка \
+  спонтанным; прежде чем решиться на такой шаг, человек должен все обдумать и рассчитать. Получая щенка \
   в подарок, новый владелец лишен такой возможности. Даже если поначалу он рад появлению мягкого пушистого комочка, \
   то по прошествии нескольких дней, столкнувшись с тем, что животное требует много внимания и не всегда послушно, \
   может изменить свое мнение и попросту избавиться от такой «обузы». Хорошо, если зверька вернут обратно в приют или \
@@ -92,7 +90,7 @@
 3. Если дорога будет долгой, следует время от времени делать санитарные остановки. Перед длительной поездкой питомцу \
   необходимо собрать собственный багаж: поводок и ошейник, игрушки, миски, пеленки, влажные салфетки. Подумайте о \
   том, как вы будете кормить и поить питомца в дороге\n\n
-/puppyhouse=Подготовка дома для щенка\n\n\
+/cubhouse=Подготовка дома для щенка\n\n\
   Новый дом для собаки — это переживание, иногда стресс, эмоции: новые запахи, обстановка, люди, другие животные, \
   звуки, неизученное пространство.\n\n\
   Продумайте место, которое будет отведено хвостатому другу для отдыха и пребывания в случае, если необходимо ограничить \
@@ -110,7 +108,7 @@
   4. Выбрать собачьи игрушки, которые будут интересны питомцу.\n\
   5. Приобрести корм и лакомства.\n\
   6. Собрать средства по уходу и аптечку.\n
-/doghouse=Подготовка дома для взрослой собаки\n\n\
+/adulthouse=Подготовка дома для взрослой собаки\n\n\
   Новый дом для собаки — это переживание, иногда стресс, эмоции: новые запахи, обстановка, люди, другие животные, \
   звуки, неизученное пространство.\n\
   Продумайте место, которое будет отведено хвостатому другу для отдыха и пребывания в случае, если необходимо ограничить \
@@ -130,7 +128,7 @@
   4. Выбрать собачьи игрушки, которые будут интересны питомцу.\n\
   5. Приобрести корм и лакомства.\n\
   6. Собрать средства по уходу и аптечку.\n
-/doghandicap=Особенности подготовки для собак с ограниченными возможностями:\n\n\
+/handicap=Особенности подготовки для собак с ограниченными возможностями:\n\n\
   1. Слепая собака\n\
   Для такого питомца очень важно обеспечить безопасную среду: в первую очередь внимательно осмотрите квартиру, \
   уберите все торчащие предметы, которые могут поранить собаку, огородите лестницы, закройте люки и ямы во дворе \
@@ -148,21 +146,4 @@
   1. Кинолог 3, тел: +79998882233\n\
   1. Кинолог 4, тел: +79998882233\n\
   1. Кинолог 5, тел: +79998882233\n
-/warning=Дорогой усыновитель, мы заметили, что ты заполняешь отчет не так подробно, как необходимо. \
-  Пожалуйста, подойди ответственнее к этому занятию. В противном случае волонтеры приюта будут обязаны самолично \
-  проверять условия содержания собаки
-DAILY_TEXT_REPORT_REMINDER=🔔 Добрый день! Напоминаем Вам о необходимости ежедневно присылать текстовые и фото отчеты \
-  о состоянии усыновленного питомца.\n\
-  ‼️Мы видим, что за сегодня вы еще не прислали текстовый отчет. Пожалуйста пришлите текстовый отчет в любое время \
-  в течение дня. Чтобы прислать отчет, отправьте команду /report
-DAILY_PHOTO_REPORT_REMINDER=🔔 Добрый день! Напоминаем Вам о необходимости ежедневно присылать текстовые и фото отчеты \
-  о состоянии усыновленного питомца.\n\
-  ‼️Мы видим, что за сегодня вы еще не прислали фото отчет. Пожалуйста пришлите фото отчет в любое время в течение дня. \
-  Чтобы прислать отчет, отправьте команду /report"
-PROBATION_EXTENDED_NOTIF=Добрый день! Для Вас был продлен испытательный срок. Для уточнения деталей пожалуйста \
-  обратитесь к волонтеру. Новая дата окончания испытательного срока: 
-PROBATION_FAILED_NOTIF=Добрыай день! Вынуждены Вам сообщить, что Вы не прошли испытательный срок, и Вам отказано в \
-  усыновлении питомца. Для получения дальнейших инструкций, пожалуйста обратитесь к волонтеру.
-PROBATION_SUCCESSFUL_NOTIF=Поздравляем!🎉🎉🎉 Вы успешно прошли испытательный срок! Теперь Вы счастливый хозяин \
-  Вашего нового питомца! Пожалуйста обратитесь к волонтеру для завершения процесса усыновления питомца.
-REPORTS_MISSING_FOR2DAYS=Отсутствуют отчеты за 2 дня. 
+/orderpass=Чтобы заказать пропуск на автомобиль, пожалуйста позвоните по телефону: +7(999)222 22 22
