--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,5 @@ spring.jpa.show_sql=true
 
 reports.path.dir=reports
 cynologist.advice.url=dogfriend.org/2012/04/08/rescued-dog-rehab/
-newperson.url=127.0.0.1:8080/newperson?chatId=
+newperson.url=127.0.0.1:8080/newperson/
 volunteer.chatId=464584156
